Trying to fix the scrollbars

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html { cursor: url("https://raw.githubusercontent.com/alyulina/alyulina.github.io/master/img/cursor_black.png"), auto !important; }
 
-@media only screen and (min-width: 1025px) { body { margin: 60px auto; width: 800px; overflow: visible } }
-@media only screen and (max-width: 1024px) { body { margin: 60px 60px; width: 405px; transform: scale(1.8); transform-origin: 0 0; -webkit-text-size-adjust: 100%; overflow: visible } }
+@media only screen and (min-width: 1025px) { body { margin: 60px auto; width: 800px; overflow: visible !important;} }
+@media only screen and (max-width: 1024px) { body { margin: 60px 60px; width: 405px; transform: scale(1.8); transform-origin: 0 0; -webkit-text-size-adjust: 100%; overflow: visible !important; } }
 
 nav ul { font-family:'Helvetica Neue', 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; margin-top: 0px; margin-bottom: 30px; }
 nav ul li { display: inline; margin-right: 20px; }
@@ -10,8 +10,8 @@ a { font-size: 20px; line-height: 1.4em; text-decoration: none; color: #878787; 
 a:hover, #about.active, #research.active, #publications.active, #contact.active { font-size: 20px; line-height: 1.4em; text-decoration: none; color: #fa8072; }
 a { cursor: url("https://raw.githubusercontent.com/alyulina/alyulina.github.io/master/img/cursor_pink.png"), auto !important; }
 
-h1 { font-size: 40px; font-family:'Helvetica Neue', 'Helvetica', 'Arial', 'Sans-Serif'; margin-bottom: 10px; }
-p { font-size: 20px; line-height: 1.4em; font-family:'Helvetica Neue', 'Helvetica', 'Arial', 'Sans-Serif'; color: #333; margin-bottom: 10px; margin-top: 0px; overflow: scroll; }
+h1 { font-size: 40px; font-family:'Helvetica Neue', 'Helvetica', 'Arial', 'Sans-Serif'; margin-bottom: 10px; overflow: visible !important;}
+p { font-size: 20px; line-height: 1.4em; font-family:'Helvetica Neue', 'Helvetica', 'Arial', 'Sans-Serif'; color: #333; margin-bottom: 10px; margin-top: 0px; overflow: visible !important; }
 
 a.footer { font-size: 20px; line-height: 1.4em; text-decoration: none; color: #ffffff; }
 a.footer:hover { font-size: 20px; line-height: 1.4em; text-decoration: none; color: #fab7af; }
